--- a/universezy/package.json
+++ b/universezy/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "iview": "^3.2.0",
+    "mavon-editor": "^2.6.17",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
