--- a/universezy/package.json
+++ b/universezy/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "iview": "^3.2.0",
     "mavon-editor": "^2.6.17",
     "vue": "^2.5.2",
