--- a/universezy/package.json
+++ b/universezy/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "iview": "^3.2.0",
     "mavon-editor": "^2.6.17",
+    "qrcodejs2": "0.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
