--- a/universezy/package.json
+++ b/universezy/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "iview": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "mavon-editor": "^2.6.17",
     "qrcodejs2": "0.0.2",
     "vue": "^2.5.2",
