--- a/universezy/package.json
+++ b/universezy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universezy",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Zengyu's github pages.",
   "author": "曾宇 <1213814232@qq.com>",
   "private": true,
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "iview": "^3.4.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mavon-editor": "^2.7.5",
     "qrcodejs2": "0.0.2",
+    "view-design": "^4.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
     "vuex": "^3.1.1"
